--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -5,6 +5,6 @@
     <span class="spacer"></span>
     <a mat-raised-button color="secondary" routerLink="/register">Registration</a>
     <a mat-raised-button color="secondary" routerLink="/login">Login</a>
-    <a mat-raised-button color="secondary" routerLink="/logout" onclick="logout()">Logout</a>
+    <a mat-raised-button color="secondary" routerLink="/logout">Logout</a>
   </mat-toolbar>
 </nav>
