car service model, registration, list of the car

--- a/frontend/src/app/registration/registration.component.html
+++ b/frontend/src/app/registration/registration.component.html
@@ -1,17 +1,19 @@
-<!--<p>registration works!</p>-->
-<!--<form (submit)="registerUser($event)" method="post" action="/registration">-->
-<!--  <input type="text" id="username">-->
-<!--  <input type="text" id="password">-->
-<!--  <button type="submit">Register</button>-->
-<!--</form>-->
-<form>
-  <label>
-    Email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Password:
-    <input type="password" name="password">
-  </label>
-  <button type="submit">Register</button>
+<form class="example-form">
+  <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>User Name</mat-label>
+    <input matInput placeholder="Enter your name" name="username"
+           [(ngModel)] ="username">
+  </mat-form-field>
+  <br>
+  <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>Email</mat-label>
+    <input matInput placeholder="Enter your email" value="" name="email" type="email" [(ngModel)]= "email">
+  </mat-form-field>
+  <br>
+  <mat-form-field class="example-full-width" appearance="fill">
+    <mat-label>Password</mat-label>
+    <input matInput placeholder="Enter your password" value="" name="password" type="password" [(ngModel)]= "password">
+  </mat-form-field>
+  <br>
+  <button mat-raised-button color="primary" (click)="register()">Submit</button>
 </form>
