--- a/frontend/src/app/repair-services/repair-services.component.html
+++ b/frontend/src/app/repair-services/repair-services.component.html
@@ -12,6 +12,7 @@
     <td>{{car.name}}</td>
     <td>{{car.type}}</td>
     <td>{{car.price}}</td>
+    <td><a  mat-raised-button color="secondary" routerLink="/repair/{{car._id}}">Repair services</a></td>
 
   </tr>
   </tbody>
