service hozzaadas az adminnak, ehhez accessLevel lekeres, feluletletrehozas, authguard az adminra, add-service letrehozas

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -2,6 +2,7 @@
   <mat-toolbar>
     <a mat-raised-button color="secondary" routerLink="/">Home</a>
     <a  mat-raised-button color="secondary" routerLink="/repair">Repair services</a>
+    <a mat-raised-button color="secondary" routerLink="/add">Add</a>
     <span class="spacer"></span>
     <a mat-raised-button color="secondary" routerLink="/register">Registration</a>
     <a mat-raised-button color="secondary" routerLink="/login">Login</a>
