--- a/frontend/src/app/repair-services/repair-services.component.html
+++ b/frontend/src/app/repair-services/repair-services.component.html
@@ -4,7 +4,7 @@
   <tr>
     <th>Name</th>
     <th>Type</th>
-    <th>Price0</th>
+    <th>Price</th>
   </tr>
   </thead>
   <tbody>
@@ -12,7 +12,7 @@
     <td>{{car.name}}</td>
     <td>{{car.type}}</td>
     <td>{{car.price}}</td>
-    <td><a  mat-raised-button color="secondary" routerLink="/repair/{{car._id}}">Repair services</a></td>
+    <td><a  mat-raised-button color="secondary" routerLink="/repair/{{car._id}}">Go to the details</a></td>
 
   </tr>
   </tbody>
