home, about, delete

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -3,6 +3,7 @@
     <a mat-raised-button color="secondary" routerLink="/">Home</a>
     <a  mat-raised-button color="secondary" routerLink="/repair">Repair services</a>
     <a mat-raised-button color="secondary" routerLink="/add">Add</a>
+    <a mat-raised-button color="secondary" routerLink="/about">About</a>
     <span class="spacer"></span>
     <a mat-raised-button color="secondary" routerLink="/register">Registration</a>
     <a mat-raised-button color="secondary" routerLink="/login">Login</a>
