--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,4 @@
-
-<p>home works!</p>
-<script>console.log('hello')</script>
-<button (click)="goToLogin()" > Login</button>
-
+<div class="example">
+<h1>This is the homepage of the car service!</h1>
+<h6>You can login in the right corner.</h6>
+</div>
